--- a/index.html
+++ b/index.html
@@ -184,16 +184,6 @@
 		padding: 40px 70px;
 		color: #F5F5F5;
 	}
-	.hide {
-		display: none;
-		position: sticky;
-	}
-	.comingsoon:hover + .hide {
-		display: block;
-		background-color: #9BC4D7;
-		border: 1px solid #2F2C25;
-		cursor: not-allowed;
-	}
 </style>
 <!--END OF CSS CODES-->
 	
@@ -207,7 +197,7 @@
 	<br>
 	<ul>
 		<li style="float:left;margin-top:-15px;"><a href="index.html"><img src="ZARA HAPIZ logo.png" alt="ZH" style="width:90px;height:90px;margin-top:-10px;margin-bottom:-10px;"></a></li>
-  		<li><a href="store.html" style="cursor:not-allowed;">store</a></li>
+  		<li><a href="store.html">store</a></li>
   		<li><a href="art gallery.html">art gallery</a></li>
 		<li><a class="active" href="index.html">home</a></li>
 	</ul>
