--- a/art gallery.html
+++ b/art gallery.html
@@ -260,7 +260,7 @@
 	<br>
 	<ul>
 		<li style="float:left;margin-top:-15px;"><a href="index.html"><img src="ZARA HAPIZ logo.png" alt="ZH" style="width:90px;height:90px;margin-top:-10px;margin-bottom:-10px;"></a></li>
-  		<li><a href="store.html" style="cursor:not-allowed;">store</a></li>
+  		<li><a href="store.html">store</a></li>
   		<li><a class="active" href="art gallery.html">art gallery</a></li>
 		<li><a href="index.html">home</a></li>
 	</ul>
