--- a/art gallery.html
+++ b/art gallery.html
@@ -6,6 +6,7 @@
 <title>HOME - Zara Hapiz</title>
 <link rel="icon" type="image/x-icon" href="ZARA HAPIZ logo.png">
 <link rel="stylesheet" href="https://use.typekit.net/oag6cqw.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 <!--CSS CODES-->
 <style>
@@ -240,11 +241,39 @@
 	  	text-decoration: none;
 	  	cursor: pointer;
 	}
-	/* responsive?? */
-	@media only screen and (max-width: 700px){
+	/* responsive stuff */
+	@media screen and (max-width: 800px) {
+		body {
+			margin: 35px 10px;
+			overflow-x: hidden;
+		}
+		h1 {
+			font-size: 15vw;
+		}
+		h2 {
+			font-size: 6vw;
+		}
+		h3 {
+			font-size: 6vw;
+		}
+		h4, h5 {
+			font-size: 5vw;
+		}
+		ul {
+			width: 100%;
+		}
+		li a {
+			font-size: 5vw;
+			text-align: right;
+			line-height: 2vw;
+			overflow: visible;
+		}
 		.modal-content {
     	width: 100%;
  		}
+		::-webkit-scrollbar {
+		width: 0px;
+		}
 	}
 </style>
 <!--END OF CSS CODES-->
