--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>HOME - Zara Hapiz</title>
 <link rel="icon" type="image/x-icon" href="ZARA HAPIZ logo.png">
 <link rel="stylesheet" href="https://use.typekit.net/oag6cqw.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 <!--CSS CODES-->
 <style>
@@ -36,6 +37,7 @@
 		font-weight: 300;
 		font-size: 0.7em;
 	}
+	
 	.button {
   		background-color: #F5F5F5;
   		color: #2F2C25;
@@ -45,9 +47,6 @@
   		display: inline-block;
   		font-size: 0.7em;
 		border: 1px solid #2F2C25;
-	}
-	a:hover {
-		color: aqua;
 	}
 	::-webkit-scrollbar {
 		width: 10px;
@@ -69,7 +68,7 @@
 		margin-right: auto;
 		margin-bottom: 0px;
 		padding: 0px;
-		width: 1100px;
+		width: 100%;
 		overflow: hidden;
 		font-size: 25px;
 	}
@@ -183,6 +182,37 @@
 		margin-right: -35px;
 		padding: 40px 70px;
 		color: #F5F5F5;
+	}
+		/* responsive stuff */
+	@media screen and (max-width: 800px) {
+		body {
+			margin: 35px 10px;
+			overflow-x: hidden;
+		}
+		h1 {
+			font-size: 15vw;
+		}
+		h2 {
+			font-size: 6vw;
+		}
+		h3 {
+			font-size: 6vw;
+		}
+		h4, h5 {
+			font-size: 5vw;
+		}
+		ul {
+			width: 100%;
+		}
+		li a {
+			font-size: 5vw;
+			text-align: right;
+			line-height: 2vw;
+			overflow: visible;
+		}
+		::-webkit-scrollbar {
+		width: 0px;
+		}
 	}
 </style>
 <!--END OF CSS CODES-->
