--- a/store.html
+++ b/store.html
@@ -20,7 +20,7 @@
 		cursor: default;
 	}
 	h1 {
-		font-family: 'Apple Garamond', Garamond, serif;
+		font-family: 'Apple Garamond', 'neue-haas-grotesk-text', Garamond, serif;
 		font-size: 3.5em;
 		font-weight: 400;
 		margin: -10px 0 -10px;
