--- a/art gallery.html
+++ b/art gallery.html
@@ -64,7 +64,7 @@
 		margin-right: auto;
 		margin-bottom: 0px;
 		padding: 0px;
-		width: 1100px;
+		width: 100%;
 		overflow: hidden;
 		font-size: 25px;
 	}
