--- a/store.html
+++ b/store.html
@@ -20,7 +20,7 @@
 		cursor: default;
 	}
 	h1 {
-		font-family: 'Apple Garamond', 'neue-haas-grotesk-text', Garamond, serif;
+		font-family: 'Apple Garamond', 'neue-haas-grotesk-text',Garamond, serif;
 		font-size: 3.5em;
 		font-weight: 400;
 		margin: -10px 0 -10px;
@@ -296,6 +296,11 @@
 		<img src="artwork/garden (say it like dat).png" width="300px" alt="F2F - SZA">
 		<div class="container">Garden (Say It Like Dat) - SZA<br>
 		<div class="button"><a style="text-decoration:none;color:#f5f5f5;" href="https://drive.google.com/file/d/1UGCigJldydBfBdMg38Iy846ICWtyU0fI/view?usp=sharing" target="_blank">download PNG</a></div></div></div>
+		
+		<div class="gallery">
+		<img src="artwork/I Ain't Got Time! - Tyler.png" width="300px" alt="F2F - SZA">
+		<div class="container">I Ain't Got Time! - Tyler, The Creator<br>
+		<div class="button"><a style="text-decoration:none;color:#f5f5f5;" href="https://drive.google.com/file/d/1RLbmrsHETk0TOOVxCZIdJetdKyRyCiql/view?usp=sharing" target="_blank">download PNG</a></div></div></div>
 		</div>
 	<div class="divider"></div>
 	
