--- a/store.html
+++ b/store.html
@@ -298,7 +298,7 @@
 		<div class="button"><a style="text-decoration:none;color:#f5f5f5;" href="https://drive.google.com/file/d/1UGCigJldydBfBdMg38Iy846ICWtyU0fI/view?usp=sharing" target="_blank">download PNG</a></div></div></div>
 		
 		<div class="gallery">
-		<img src="artwork/I Ain't Got Time! - Tyler.png" width="300px" alt="F2F - SZA">
+		<img src="artwork/I Ain't Got Time! - Tyler.png" width="300px" alt="I Ain't Got Time! - Tyler, The Creator">
 		<div class="container">I Ain't Got Time! - Tyler, The Creator<br>
 		<div class="button"><a style="text-decoration:none;color:#f5f5f5;" href="https://drive.google.com/file/d/1RLbmrsHETk0TOOVxCZIdJetdKyRyCiql/view?usp=sharing" target="_blank">download PNG</a></div></div></div>
 		</div>
