--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>HOME - Zara Hapiz</title>
-<link rel="icon" type="image/x-icon" href="ZARA HAPIZ logo.png">
+<link rel="icon" type="image/x-icon" href="zara hapiz logo simple-1.png">
 <link rel="stylesheet" href="https://use.typekit.net/oag6cqw.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
