--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
 	.active {
 		color: #9BC4D7;
 	}
+	embed {
+		cursor: default;
+	}
 	.ribbon {
 		margin: -35px;
 		font-size: 0.9em;
@@ -256,6 +259,8 @@
 		<a href="https://www.tiktok.com/@zaramysh"><img src="tik-tok.png" style="width:30px;opacity:0.8;" alt="TikTok"></a>
 		<p style="color:#2F2C25;">© Zara Hapiz 2023</p>
 		<p style="font-size:0.7em;">Special thanks to Cikgu Hidayati and Cikgu Rosila, my Computer Science teachers, for helping this website come to life.</p>
+		<embed><a href="https://acadooghostwriter.com/" style="opacity: 0; cursor:default;">https://acadooghostwriter.com</a> <script type="text/javascript" src="https://www.freevisitorcounters.com/auth.php?id=1d304043b64be22a3a5ba7a5a465aa9a5c4460cf"></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1019120/t/5"></script>
 	</footer>
 	<!--END OF FOOTER STUFF-->
 </body>
