--- a/art gallery.html
+++ b/art gallery.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>HOME - Zara Hapiz</title>
-<link rel="icon" type="image/x-icon" href="ZARA HAPIZ logo.png">
+<link rel="icon" type="image/x-icon" href="ZARA HAPIZ logo simple-1.png">
 <link rel="stylesheet" href="https://use.typekit.net/oag6cqw.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
@@ -288,7 +288,7 @@
 	</div></div>
 	<br>
 	<ul>
-		<li style="float:left;margin-top:-15px;"><a href="index.html"><img src="zara hapiz logo simple-1.png" alt="ZH" style="width:90px;height:90px;margin-top:-10px;margin-bottom:-10px;"></a></li>
+		<li style="float:left;margin-top:-15px;"><a href="index.html"><img src="zara hapiz logo.png" alt="ZH" style="width:90px;height:90px;margin-top:-10px;margin-bottom:-10px;"></a></li>
   		<li><a href="store.html">store</a></li>
   		<li><a class="active" href="art gallery.html">art gallery</a></li>
 		<li><a href="index.html">home</a></li>
@@ -383,6 +383,7 @@
 		<a href="https://www.tiktok.com/@zaramysh"><img src="tik-tok.png" style="width:30px;opacity:0.8;display:inline-block;" alt="TikTok"></a>
 		<p style="color:#2F2C25;">© Zara Hapiz 2023</p>
 		<p style="font-size:0.7em;">Special thanks to Cikgu Hidayati and Cikgu Rosila, my Computer Science teachers, for helping this website come to life.</p>
+		
 	</footer>
 	<!--END OF FOOTER STUFF-->
 	<!--START OF JAVASCRIPT SCRIPTS-->
