--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>HOME - Zara Hapiz</title>
-<link rel="icon" type="image/x-icon" href="zara hapiz logo simple-1.png">
+<link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO SIMPLE V2.png">
 <link rel="stylesheet" href="https://use.typekit.net/oag6cqw.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
@@ -37,17 +37,6 @@
 		font-weight: 300;
 		font-size: 0.7em;
 	}
-	
-	.button {
-  		background-color: #F5F5F5;
-  		color: #2F2C25;
-  		padding: 15px 32px;
-  		text-align: center;
-  		text-decoration: none;
-  		display: inline-block;
-  		font-size: 0.7em;
-		border: 1px solid #2F2C25;
-	}
 	::-webkit-scrollbar {
 		width: 10px;
 	}
@@ -62,24 +51,20 @@
 		background: #A5C497;
 	}
 	ul {
+		height: 0px;
 		list-style-type: none;
-		margin-top: 20px;
-		margin-left: auto;
-		margin-right: auto;
-		margin-bottom: 0px;
-		padding: 0px;
-		width: 100%;
-		overflow: hidden;
+		margin: 0;
+  		padding: 0;
+		float: right;
 		font-size: 25px;
 	}
 	li {
-		float: right;
+		float: left;
 	}
 	li a {
 		display: block;
 		color: black;
-		text-align: center;
-		padding: 10px 30px 5px;
+		margin: 15px 15px 15px 30px;
 		text-decoration: none;
 		color: #2F2C25;
 	}
@@ -187,7 +172,7 @@
 		color: #F5F5F5;
 	}
 		/* responsive stuff */
-	@media screen and (max-width: 800px) {
+	@media screen and (max-width: 600px) {
 		body {
 			margin: 35px 10px;
 			overflow-x: hidden;
@@ -205,11 +190,13 @@
 			font-size: 5vw;
 		}
 		ul {
-			width: 100%;
+			width: 50%;
+			text-align: right;
 		}
 		li a {
-			font-size: 5vw;
-			text-align: right;
+			margin-top: 3.5vw;
+			margin-bottom: -2vw;
+			font-size: 4vw;
 			line-height: 2vw;
 			overflow: visible;
 		}
@@ -228,12 +215,15 @@
 	THANK YOU FOR VISITING ZARA'S NEW WEBSITE! THANK YOU FOR VISITING ZARA'S NEW WEBSITE!
 	</div></div>
 	<br>
-	<ul>
-		<li style="float:left;margin-top:-15px;"><a href="index.html"><img src="ZARA HAPIZ logo.png" alt="ZH" style="width:90px;height:90px;margin-top:-10px;margin-bottom:-10px;"></a></li>
-  		<li><a href="store.html">store</a></li>
-  		<li><a href="art gallery.html">art gallery</a></li>
+	<ul style="float:left;">
+		<li style="float:left;margin-top:-20px;"><a href="index.html"><img src="ZARA HAPIZ LOGO V2.png" alt="ZH" style="width:90px;height:90px;"></a></li>
+	</ul><ul style="float:right;margin-top:5px;">
 		<li><a class="active" href="index.html">home</a></li>
+  		<li><a href="art gallery.html">art gallery</a></li>
+		<li><a href="store.html">store</a></li>
+		<li><a href="contact.html">contact</a></li>
 	</ul>
+	<br><br>
 	<div class="divider"></div>
 	<!--END OF HEADER STUFF-->
 	
