--- a/store.html
+++ b/store.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>STORE - Zara Hapiz</title>
-<link rel="icon" type="image/x-icon" href="zara hapiz logo simple-1.png" alt="ZH">
+<link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO SIMPLE V2.png">
 <link rel="stylesheet" href="https://use.typekit.net/oag6cqw.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
@@ -54,24 +54,20 @@
 		background: #A5C497;
 	}
 	ul {
+		height: 0px;
 		list-style-type: none;
-		margin-top: 20px;
-		margin-left: auto;
-		margin-right: auto;
-		margin-bottom: 0px;
-		padding: 0px;
-		width: 100%;
-		overflow: hidden;
+		margin: 0;
+  		padding: 0;
+		float: right;
 		font-size: 25px;
 	}
 	li {
-		float: right;
+		float: left;
 	}
 	li a {
 		display: block;
 		color: black;
-		text-align: center;
-		padding: 10px 30px 5px;
+		margin: 15px 15px 15px 30px;
 		text-decoration: none;
 		color: #2F2C25;
 	}
@@ -179,12 +175,6 @@
 		display: none;
 		position: sticky;
 	}
-	.comingsoon:hover + .hide {
-		display: block;
-		background-color: #9BC4D7;
-		border: 1px solid #2F2C25;
-		cursor: not-allowed;
-	}
 	img {
 		max-width: 450px;
 		height: auto;
@@ -222,7 +212,7 @@
 		opacity: 0.5;
 	}
 	/* responsive stuff */
-	@media screen and (max-width: 800px) {
+	@media screen and (max-width: 600px) {
 		body {
 			margin: 35px 10px;
 			overflow-x: hidden;
@@ -240,11 +230,13 @@
 			font-size: 5vw;
 		}
 		ul {
-			width: 100%;
+			width: 50%;
+			text-align: right;
 		}
 		li a {
-			font-size: 5vw;
-			text-align: right;
+			margin-top: 3.5vw;
+			margin-bottom: -2vw;
+			font-size: 4vw;
 			line-height: 2vw;
 			overflow: visible;
 		}
@@ -263,12 +255,15 @@
 	THANK YOU FOR VISITING ZARA'S NEW WEBSITE! THANK YOU FOR VISITING ZARA'S NEW WEBSITE!
 	</div></div>
 	<br>
-	<ul>
-		<li style="float:left;margin-top:-15px;"><a href="index.html"><img src="ZARA HAPIZ logo.png" alt="ZH" style="width:90px;height:90px;margin-top:-10px;margin-bottom:-10px;"></a></li>
-  		<li><a class="active" href="store.html">store</a></li>
-  		<li><a href="art gallery.html">art gallery</a></li>
+	<ul style="float:left;">
+		<li style="float:left;margin-top:-20px;"><a href="index.html"><img src="ZARA HAPIZ LOGO V2.png" alt="ZH" style="width:90px;height:90px;"></a></li>
+	</ul><ul style="float:right;margin-top:5px;">
 		<li><a href="index.html">home</a></li>
+  		<li><a href="art gallery.html">art gallery</a></li>
+		<li><a class="active" href="store.html">store</a></li>
+		<li><a href="contact.html">contact</a></li>
 	</ul>
+	<br><br>
 	<div class="divider"></div>
 	<!--END OF HEADER STUFF-->
 	
@@ -296,11 +291,16 @@
 		<img src="artwork/garden (say it like dat).png" width="300px" alt="F2F - SZA">
 		<div class="container">Garden (Say It Like Dat) - SZA<br>
 		<div class="button"><a style="text-decoration:none;color:#f5f5f5;" href="https://drive.google.com/file/d/1UGCigJldydBfBdMg38Iy846ICWtyU0fI/view?usp=sharing" target="_blank">download PNG</a></div></div></div>
-		
+	
 		<div class="gallery">
 		<img src="artwork/I Ain't Got Time! - Tyler.png" width="300px" alt="I Ain't Got Time! - Tyler, The Creator">
 		<div class="container">I Ain't Got Time! - Tyler, The Creator<br>
 		<div class="button"><a style="text-decoration:none;color:#f5f5f5;" href="https://drive.google.com/file/d/1RLbmrsHETk0TOOVxCZIdJetdKyRyCiql/view?usp=sharing" target="_blank">download PNG</a></div></div></div>
+		
+		<div class="gallery">
+		<img src="artwork/JUGGERNAUT - Tyler, The Creator.png" width="300px" alt="JUGGERNAUT (feat. Lil Uzi Vert & Pharrell Williams)">
+		<div class="container">JUGGERNAUT - Tyler, The Creator<br>
+		<div class="button"><a style="text-decoration:none;color:#f5f5f5;" href="https://drive.google.com/file/d/1HzqEMJHKosbOswL4A_Xi0TN31vs6SAGZ/view?usp=sharing" target="_blank">download PNG</a></div></div></div>
 		</div>
 	<div class="divider"></div>
 	
