--- a/art gallery.html
+++ b/art gallery.html
@@ -12,30 +12,33 @@
 <style>
 	body {
 		font-family: 'neue-haas-grotesk-text', Arial, sans-serif;
-		font-size: 2em;
-		font-weight: 400;
+		font-size: 1.5em;
+		font-weight: 300;
 		color: #2F2C25;
 		margin: 35px;
 		background-color: #F5F5F5;
 		cursor: default;
 	}
 	h1 {
-		font-family: 'Apple Garamond', 'neue-haas-grotesk-text', Garamond, serif;
-		font-size: 3.5em;
+		font-family: 'roc-grotesk-condensed', Garamond, sans-serif;
+		font-size: 4em;
 		font-weight: 400;
-		margin: -10px 0 -10px;
+		font-style: normal;
+		margin: -10px 0 -30px;
 		line-height: 1;
 	}
 	h2 {
 		margin: 0;
+		font-weight: 300;
 	}
 	h3 {
 		margin: 10px 0 10px 0;
+		font-weight: 300;
 	}
 	h4 {
 		margin: 10px 0 10px 0;
 		font-weight: 300;
-		font-size: 0.7em;
+		font-size: 1em;
 	}
 	img {
 		max-height: 450px;
@@ -63,7 +66,7 @@
 		margin: 0;
   		padding: 0;
 		float: right;
-		font-size: 25px;
+		font-size: 0.9em;
 	}
 	li {
 		float: left;
@@ -93,6 +96,7 @@
 		white-space: nowrap;
 	}
 	.ribbon-text {
+		font-size: 1.4em;
   		animation: bannermove 10s linear infinite;
  		animation-play-state: running;
  		-webkit-animation-play-state: running;
@@ -124,7 +128,7 @@
 	footer {
 		color: #8A8883;
 		text-align: center;
-		font-size: 0.6em;
+		font-size: 0.9em;
 	}
 	.pink-bg {
 		background-color: #EDC0BE;
@@ -190,7 +194,7 @@
 		vertical-align: top;
 	}
 	.container {
-		padding: 0px 15px 0px 15px;
+		padding: 10px 15px 0px 15px;
 		overflow: visible;
 	}
 	/* The Modal (background) */
@@ -279,11 +283,11 @@
 <body>
 	<!--HEADER STUFF-->
 	<div class="ribbon"><div class="ribbon-text">
-	THANK YOU FOR VISITING ZARA'S NEW WEBSITE! THANK YOU FOR VISITING ZARA'S NEW WEBSITE!
+	THANK YOU FOR VISITING ZARA'S WEBSITE! THANK YOU FOR VISITING ZARA'S WEBSITE!
 	</div></div>
 	<br>
 	<ul style="float:left;">
-		<li style="float:left;margin-top:-20px;"><a href="index.html"><img src="ZARA HAPIZ LOGO V2.png" alt="ZH" style="width:90px;height:90px;"></a></li>
+		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO V2.png" alt="ZH" style="width:90px;height:90px;"></a></li>
 	</ul><ul style="float:right;margin-top:5px;">
 		<li><a href="index.html">home</a></li>
   		<li><a class="active" href="art gallery.html">art gallery</a></li>
