--- a/art gallery.html
+++ b/art gallery.html
@@ -6,6 +6,7 @@
 <title>HOME - Zara Hapiz</title>
 <link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO SIMPLE V2.png">
 <link rel="stylesheet" href="https://use.typekit.net/oag6cqw.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 <!--CSS CODES-->
@@ -68,15 +69,13 @@
 		float: right;
 		font-size: 0.9em;
 	}
-	li {
-		float: left;
-	}
-	li a {
+	ul a {
 		display: block;
 		color: black;
 		margin: 15px 15px 15px 30px;
 		text-decoration: none;
 		color: #2F2C25;
+		float: left;
 	}
 	li a:hover {
 		color: #5B5648;
@@ -241,7 +240,16 @@
 	  	text-decoration: none;
 	  	cursor: pointer;
 	}
-	/* responsive stuff */
+	.topnav .icon {
+  		display: none;
+	}
+	.column {
+		flex: 50%;
+	}
+	.row {
+		display: flex;
+	}
+		/* responsive stuff */
 	@media screen and (max-width: 600px) {
 		body {
 			margin: 35px 10px;
@@ -263,15 +271,43 @@
 			width: 50%;
 			text-align: right;
 		}
-		li a {
+		ul a {
 			margin-top: 3.5vw;
-			margin-bottom: -2vw;
-			font-size: 4vw;
-			line-height: 2vw;
+			font-size: 7vw;
+			line-height: 8vw;
 			overflow: visible;
+		}
+		.row {
+			display: block;
+		}
+		.column {
+			margin-bottom: 10vw;
+			width: 100%;
 		}
 		::-webkit-scrollbar {
 		width: 0px;
+		}
+		.topnav { 
+		background-color: #F5F5F5;
+		}
+		.topnav a {display: none;}
+  		.topnav a.icon {
+			float: right;
+			display: block;
+ 		}
+		.topnav.responsive {position: relative;}
+		.topnav.responsive a.icon {
+			position: absolute;
+			right: 0;
+			top: 0;
+		}
+		.topnav.responsive a {
+			float: none;
+			display: block;
+			text-align: left;
+		}
+		i {
+			width: "40vw";
 		}
 	}
 </style>
@@ -288,11 +324,14 @@
 	<br>
 	<ul style="float:left;">
 		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO V2.png" alt="ZH" style="width:90px;height:90px;"></a></li>
-	</ul><ul style="float:right;margin-top:5px;">
-		<li><a href="index.html">home</a></li>
-  		<li><a class="active" href="art gallery.html">art gallery</a></li>
-		<li><a href="store.html">store</a></li>
-		<li><a href="contact.html">contact</a></li>
+	</ul><ul style="float:right;margin-top:5px;"><div class="topnav" id="myTopnav">
+		<a href="index.html">home</a>
+  		<a class="active" href="art gallery.html">art gallery</a>
+		<a href="store.html">store</a>
+		<a href="contact.html">contact</a>
+		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    	<i class="fa fa-bars" style="font-size:7.5vw;"></i>
+  </a></div>
 	</ul>
 	<br><br>
 	<div class="divider"></div>
@@ -388,8 +427,16 @@
 		
 	</footer>
 	<!--END OF FOOTER STUFF-->
-	<!--START OF JAVASCRIPT SCRIPTS-->
-<script>
+	<!--JAVASCRIPT SCRIPTS-->
+	<script>
+	function myFunction() {
+		var x = document.getElementById("myTopnav");
+	    if (x.className === "topnav") {
+			x.className += " responsive";
+	  	} else {
+			x.className = "topnav";
+	  	}
+	}
 // Get the modal
 var modal = document.getElementById('myModal');
 
