--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
 <title>CONTACT - Zara Hapiz</title>
 <link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO SIMPLE V2.png">
 <link rel="stylesheet" href="https://use.typekit.net/oag6cqw.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 <!--CSS CODES-->
@@ -61,15 +62,13 @@
 		float: right;
 		font-size: 0.9em;
 	}
-	li {
-		float: left;
-	}
-	li a {
+	ul a {
 		display: block;
 		color: black;
 		margin: 15px 15px 15px 30px;
 		text-decoration: none;
 		color: #2F2C25;
+		float: left;
 	}
 	li a:hover {
 		color: #5B5648;
@@ -175,6 +174,15 @@
 		padding: 40px 70px;
 		color: #F5F5F5;
 	}
+		.topnav .icon {
+  		display: none;
+	}
+	.column {
+		flex: 50%;
+	}
+	.row {
+		display: flex;
+	}
 		/* responsive stuff */
 	@media screen and (max-width: 600px) {
 		body {
@@ -197,15 +205,43 @@
 			width: 50%;
 			text-align: right;
 		}
-		li a {
+		ul a {
 			margin-top: 3.5vw;
-			margin-bottom: -2vw;
-			font-size: 4vw;
-			line-height: 2vw;
+			font-size: 7vw;
+			line-height: 8vw;
 			overflow: visible;
+		}
+		.row {
+			display: block;
+		}
+		.column {
+			margin-bottom: 10vw;
+			width: 100%;
 		}
 		::-webkit-scrollbar {
 		width: 0px;
+		}
+		.topnav { 
+		background-color: #F5F5F5;
+		}
+		.topnav a {display: none;}
+  		.topnav a.icon {
+			float: right;
+			display: block;
+ 		}
+		.topnav.responsive {position: relative;}
+		.topnav.responsive a.icon {
+			position: absolute;
+			right: 0;
+			top: 0;
+		}
+		.topnav.responsive a {
+			float: none;
+			display: block;
+			text-align: left;
+		}
+		i {
+			width: "40vw";
 		}
 	}
 </style>
@@ -221,11 +257,14 @@
 	<br>
 	<ul style="float:left;">
 		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO V2.png" alt="ZH" style="width:90px;height:90px;"></a></li>
-	</ul><ul style="float:right;margin-top:5px;">
-		<li><a href="index.html">home</a></li>
-  		<li><a href="art gallery.html">art gallery</a></li>
-		<li><a href="store.html">store</a></li>
-		<li><a class="active" href="contact.html">contact</a></li>
+	</ul><ul style="float:right;margin-top:5px;"><div class="topnav" id="myTopnav">
+		<a href="index.html">home</a>
+  		<a href="art gallery.html">art gallery</a>
+		<a href="store.html">store</a>
+		<a class="active" href="contact.html">contact</a>
+		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    	<i class="fa fa-bars" style="font-size:7.5vw;"></i>
+  </a></div>
 	</ul>
 	<br><br>
 	<div class="divider"></div>
@@ -258,5 +297,16 @@
 		<p style="font-size:0.7em;">Special thanks to Cikgu Hidayati and Cikgu Rosila, my Computer Science teachers, for helping this website come to life.</p>
 	</footer>
 	<!--END OF FOOTER STUFF-->
+	<!--JAVASCRIPT SCRIPTS-->
+	<script>
+	function myFunction() {
+		var x = document.getElementById("myTopnav");
+	    if (x.className === "topnav") {
+			x.className += " responsive";
+	  	} else {
+			x.className = "topnav";
+	  	}
+	}
+	</script>
 </body>
 </html>
